--- a/pom.xml
+++ b/pom.xml
@@ -231,5 +231,10 @@
             <artifactId>javax.websocket-api</artifactId>
             <version>1.1</version>
         </dependency>
+		 <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.4.3</version>
+        </dependency>
     </dependencies>
 </project>
