--- a/pom.xml
+++ b/pom.xml
@@ -64,11 +64,19 @@
         <activiti.version>6.0.0</activiti.version>
         <shiro.version>1.4.0</shiro.version>
         <quartz.version>2.3.0</quartz.version>
+        <javaee.version>7.0</javaee.version>
         <logback-version>1.2.3</logback-version>
         <logback-spring-version>0.1.4</logback-spring-version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>${javaee.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
